feature like and unlike for product comment api (#8)
* add like and unlike product comment api

* fix api spec on summary
